--- a/brush-shell/tests/cases/word_expansion.yaml
+++ b/brush-shell/tests/cases/word_expansion.yaml
@@ -66,6 +66,12 @@ cases:
       x=$(false) && echo "1. Made it past false"
       y=$(true) && echo "2. Made it past true"
 
+  - name: "Command substitution with exec"
+    known_failure: true
+    stdin: |
+      x=$(exec echo hi)
+      echo "x: $x"
+
   - name: "Backtick command substitution"
     stdin: |
       echo `echo hi`
