--- a/brush-shell/tests/cases/options.yaml
+++ b/brush-shell/tests/cases/options.yaml
@@ -14,6 +14,26 @@ cases:
       env | grep newvar
       env | grep unexported
 
+  - name: "set -n"
+    stdin: |
+      set -n
+      touch somefile.txt
+      ls
+
+  - name: "set -B"
+    stdin: |
+      set +B
+      echo "+B: " ${a,b}
+
+      set -B
+      echo "-B: " ${a,b}
+
+  - name: "set -t"
+    args: ["-t"]
+    stdin: |
+      echo first
+      echo second
+
   - name: "set -C"
     ignore_stderr: true
     stdin: |
