--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -49,6 +49,7 @@ tokio = { version = "1.44.2", features = [
     "rt",
     "rt-multi-thread",
     "signal",
+    "sync",
 ] }
 
 [target.'cfg(windows)'.dependencies]
