--- a/brush-shell/tests/cases/builtins/pushd_popd_dirs.yaml
+++ b/brush-shell/tests/cases/builtins/pushd_popd_dirs.yaml
@@ -45,6 +45,7 @@ cases:
       dirs
 
   - name: "dirs with tilde replacement"
+    skip: true # Started failing with 5.3 on macOS
     stdin: |
       HOME=/usr
       echo "Updated HOME: $HOME"
