--- a/brush-shell/tests/cases/patterns/filename_expansion.yaml
+++ b/brush-shell/tests/cases/patterns/filename_expansion.yaml
@@ -75,6 +75,7 @@ cases:
     stdin: "echo file[!2].txt"
 
   - name: "Expansion with tilde"
+    skip: true # Started failing with 5.3 on macOS
     stdin: |
       HOME=/some/dir
 
