--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -30,6 +30,7 @@ indexmap = "2.10.0"
 itertools = "0.14.0"
 normalize-path = "0.2.1"
 rand = "0.9.2"
+rpds = "1.1.1"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 thiserror = "2.0.12"
