--- a/deny.toml
+++ b/deny.toml
@@ -24,12 +24,7 @@ version = 2
 yanked = "deny"
 #db-path = "$CARGO_HOME/advisory-dbs"
 #db-urls = ["https://github.com/rustsec/advisory-db"]
-ignore = [
-    # fancy_regex uses derivative, which is unmaintained; but the next version of fancy_regex
-    # drops this dependency. we ignore for now with the expectation that this will go away
-    # very soon
-    "RUSTSEC-2024-0388",
-]
+ignore = []
 #git-fetch-with-cli = true
 
 # This section is considered when running `cargo deny check licenses`
@@ -45,6 +40,7 @@ allow = [
     "BSD-2-Clause",
     "BSL-1.0",
     "MIT",
+    "MPL-2.0",
     "NCSA",
     "Unicode-3.0",
     "WTFPL",
