--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -30,6 +30,7 @@ indexmap = "2.10.0"
 itertools = "0.14.0"
 normalize-path = "0.2.1"
 rand = "0.9.2"
+rpds = "1.1.1"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 thiserror = "2.0.12"
@@ -80,6 +81,7 @@ uuid = { version = "1.17.0", features = ["js"] }
 [dev-dependencies]
 anyhow = "1.0.98"
 criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
+pretty_assertions = { version = "1.4.1", features = ["unstable"] }
 
 [target.'cfg(unix)'.dev-dependencies]
 pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
