--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -20,6 +20,7 @@ workspace = true
 async-recursion = "1.1.1"
 async-trait = "0.1.89"
 brush-parser = { version = "^0.2.20", path = "../brush-parser" }
+bon = "3.7.1"
 cached = "0.56.0"
 cfg-if = "1.0.3"
 chrono = "0.4.41"
